# mini-canal

./: Cargo.toml  build.rs
protos/: AdminProtocol.proto  mini_canal_entry.proto  mini_canal_packet.proto
src/: lib.rs  main.rs
src/channel/: mod.rs  mysql_socket.rs  read_write_packet.rs  sql_handler.rs  sql_utils.rs
src/command/: client.rs  decoder.rs  event.rs  log_event.rs  mod.rs  server.rs  types.rs
src/instance/: decoder.rs  log_buffer.rs  metadata.rs  mod.rs  parser.rs  running.rs  table_meta_cache.rs
src/log/: decoder.rs  event.rs  log_buffer.rs  metadata.rs  mod.rs  parser.rs
src/parse/: inbound.rs  mod.rs  support.rs
src/protocol/: AdminProtocol.rs  mini_canal_entry.rs  mini_canal_packet.rs  mod.rs
src/utils/: mod.rs  mysql_password_encrypted.rs  time.rs
tests/: log_buffer_test.rs  utils_test.rs
